[project]
name = "repetit-be-fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Almaas Izdihar", email = "almaasizdihar@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
